@@ -1,16 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>cn.guoyukun.mvn</groupId>
+		<version>0.0.2</version>
+		<artifactId>mvn-basic</artifactId>
+	</parent>
 	<groupId>cn.guoyukun.map2map</groupId>
 	<artifactId>Map2Map</artifactId>
 	<description>Map结构转换</description>
 	<version>0.0.1-SNAPSHOT</version>
 	<properties>
 		<project.test.fileEncoding>UTF-8</project.test.fileEncoding>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.build.sourceLevel>1.6</project.build.sourceLevel>
-		<project.build.targetLevel>1.6</project.build.targetLevel>
-		<repo.sinosoft.prefix>http://114.110.8.114:8083/nexus</repo.sinosoft.prefix>
 	</properties>
 	<dependencies>
 		<!-- db -->
@@ -119,98 +120,18 @@
 		</dependency>
 
 	</dependencies>
-	<repositories>
-		<repository>
-			<id>central</id>
-			<url>http://repo1.maven.org/maven2</url>
-		</repository>
-		<repository>
-			<id>guo</id>
-			<name>guo m2 nexus repo</name>
-			<url>http://114.110.8.114:8083/nexus/content/groups/public</url>
-		</repository>
-	</repositories>
-	<pluginRepositories>
-		<pluginRepository>
-			<releases>
-				<enabled>true</enabled>
-				<updatePolicy>never</updatePolicy>
-				<checksumPolicy>warn</checksumPolicy>
-			</releases>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-			<id>guo</id>
-			<name>guo m2 nexus repo</name>
-			<url>http://114.110.8.114:8083/nexus/content/groups/public</url>
-		</pluginRepository>
-		<pluginRepository>
-			<id>central</id>
-			<url>http://114.110.8.114:8083/nexus/content/groups/public</url>
-		</pluginRepository>
-	</pluginRepositories>
+	
 	<build>
 		<plugins>
 			<plugin>
 				<!-- 编译插件 -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<!-- 编译级别 -->
-					<source>${project.build.sourceLevel}</source>
-					<target>${project.build.targetLevel}</target>
-					<!-- 源文件编码 -->
-					<encoding>${project.build.sourceEncoding}</encoding>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.16</version>
-				<configuration>
-					<!-- 该测试插件编码依赖于系统，windows下会乱码，所以显式指定 -->
-					<argLine>-Xmx512m -XX:MaxPermSize=256m
-						-Dfile.encoding=${project.test.fileEncoding}</argLine>
-					<useSystemClassLoader>true</useSystemClassLoader>
-					<parallel>methods</parallel>
-					<threadCount>4</threadCount>
-					<testFailureIgnore>true</testFailureIgnore>
-				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-scm-plugin</artifactId>
 				<version>1.8.1</version>
-			</plugin>
-			<plugin>
-				<!-- 源码插件 -->
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>2.1</version>
-				<!-- 发布时自动将源码同时发布的配置 -->
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<version>2.1</version>
-				<configuration>
-					<mavenExecutorId>forked-path</mavenExecutorId>
-					<arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-deploy-plugin</artifactId>
-				<version>2.8.1</version>
 			</plugin>
 		</plugins>
 	</build>
